--- a/Markr/Info.plist
+++ b/Markr/Info.plist
@@ -15,6 +15,8 @@
 			<string>Markdown Files</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>NSDocumentClass</key>
+			<string>NSDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
